[project]
name = "apply-job-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "fastapi>=0.136.3",
    "langgraph>=1.2.4",
    "openai>=2.41.1",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]
